<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:id="@+id/img_cover"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txt_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txt_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!-- Barre de progression de la musique -->
    <include
        layout="@layout/music_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <ImageButton
            android:id="@+id/btn_previous"
            android:contentDescription="previous music button"
            android:src="@drawable/icon_previous"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="10dp"
            android:scaleType="fitCenter"
            android:padding="8dp"
            android:background="@color/button_primary"/>

        <ImageButton
            android:id="@+id/btn_play_pause"
            android:contentDescription="play/pause button"
            android:src="@drawable/icon_play"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="10dp"
            android:scaleType="fitCenter"
            android:padding="8dp"
            android:background="@color/button_primary"/>

        <ImageButton
            android:id="@+id/btn_next"
            android:contentDescription="next music button"
            android:src="@drawable/icon_next"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="10dp"
            android:scaleType="fitCenter"
            android:padding="8dp"
            android:background="@color/button_primary"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <ImageButton
            android:id="@+id/btn_repeat"
            android:contentDescription="Repeat / Loop button"
            android:src="@drawable/icon_loop"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:scaleType="fitCenter"
            android:padding="8dp"
            android:background="@color/button_primary"/>

        <ImageButton
            android:id="@+id/btn_add_playlist"
            android:contentDescription="Add to playlist button"
            android:src="@drawable/icon_add_playlist"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="fitCenter"
            android:padding="8dp"
            android:background="@color/button_primary"/>
    </LinearLayout>


</LinearLayout>
