<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:alignItems="center"
        app:justifyContent="space_around"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="2dp">

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:background="@color/button_primary"
            android:text="⬆ Retour" />

        <ImageButton
            android:id="@+id/buttonHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_home"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:background="@color/button_primary"/>
    </com.google.android.flexbox.FlexboxLayout>

    <TextView
        android:id="@+id/txt_current_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textStyle="bold"
        android:text="/" />

    <TextView
        android:id="@+id/txt_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Aucun fichier dans ce dossier"
        android:gravity="center"
        android:visibility="gone"
        android:padding="12dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_music"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>
