<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/icon_home"
        android:title="Accueil" />

    <item
        android:id="@+id/nav_playing"
        android:icon="@drawable/icon_music_play"
        android:title="En cours" />

    <item
        android:id="@+id/nav_playlist"
        android:icon="@drawable/icon_playlist"
        android:title="Playlist" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/icon_equaliser"
        android:title="Paramètres" />
</menu>